force-app/main/default/objects/Volunteer_Assignment__c/Volunteer_Assignment__c.object-meta.xml
<CustomObject>
    <description>Volunteer that is fulfilling the needs of a position in a program for some period of time or geography.</description>
    <label>Volunteer Assignment</label>
    <nameField>
        <displayFormat>AS{00000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>