force-app/main/default/objects/Volunteer_Assignment__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>The date at which the volunteer&#39;s assignment actually ended.</description>
    <inlineHelpText>Select the end date for this assignment. If there is no end date, leave this field blank.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>