force-app/main/default/objects/Volunteer_Assignment__c/fields/Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Count__c</fullName>
    <description>Captures the number of times a volunteer has held the same assignment.</description>
    <inlineHelpText>How many times has this volunteer has held this same assignment (counting current assignment as 1)?</inlineHelpText>
    <label>Assignment Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>