force-app/main/default/objects/Volunteer_Assignment__c/fields/Candidate_Duration__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Duration__c</fullName>
    <description>Number of days spent in Candidate status</description>
    <inlineHelpText>Number of days spent in Candidate status</inlineHelpText>
    <label>Candidate Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>