force-app/main/default/objects/Volunteer_Assignment__c/fields/Commitment_Hours_Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Hours_Percentage_Complete__c</fullName>
    <description>Percentage of commitment hours goal completed.</description>
    <formula>Total_Hours__c /  Position__r.Commitment_Hours_Goal__c</formula>
    <inlineHelpText>Percentage of commitment hours goal completed.</inlineHelpText>
    <label>Commitment Hours Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>