force-app/main/default/objects/Volunteer_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The master-detail lookup field related to the Contact object.</description>
    <inlineHelpText>Enter the volunteer that is associated with this assignment and click the search button to the right of the field. A new window will open. At this point, select the volunteer who will be fulfilling this assignment.</inlineHelpText>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>