force-app/main/default/objects/Volunteer_Assignment__c/fields/Duplicate_Message__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Message__c</fullName>
    <label>Duplicate Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>