force-app/main/default/objects/Volunteer_Assignment__c/fields/Interim_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Interim_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this is an interim assignment (e.g. temporary, or back-filling someone on leave of absence.)</description>
    <inlineHelpText>Check this box if this is an interim assignment (e.g. temporary, or back-filling someone on leave of absence.)</inlineHelpText>
    <label>Interim Assignment</label>
    <type>Checkbox</type>
</CustomField>