force-app/main/default/objects/Volunteer_Assignment__c/fields/Is_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden checkbox field used as part of a summary roll-up field on Position object.</description>
    <inlineHelpText>Hidden checkbox field used as part of a summary roll-up field on Position object.</inlineHelpText>
    <label>Active Counter</label>
    <type>Checkbox</type>
</CustomField>