force-app/main/default/objects/Volunteer_Assignment__c/fields/Local_Title__c.field-meta.xml
<CustomField>
    <fullName>Local_Title__c</fullName>
    <description>Local title (specific to a region) for this position (States and Chapter programs only).  NOTE: Historical (prior to October 2015) position title information also migrated here for all programs.</description>
    <inlineHelpText>Enter a local title for this position, if applicable (States and Chapter programs only).  

NOTE: Historical (prior to October 2015) position title information also captured here for all programs.</inlineHelpText>
    <label>Local Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>