force-app/main/default/objects/Volunteer_Assignment__c/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <description>The date that that most recent status of On Hold was set.</description>
    <label>On Hold Date</label>
    <type>Date</type>
</CustomField>