force-app/main/default/objects/Volunteer_Assignment__c/fields/Pay_Monthly_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Pay_Monthly_Stipend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether an EC assignment is eligible for a stipend payment for a given month.</description>
    <inlineHelpText>Did the volunteer associated with this assignment meet all requirements to be paid a stipend this month? If so, check this field.</inlineHelpText>
    <label>Pay Monthly Stipend</label>
    <type>Checkbox</type>
</CustomField>