force-app/main/default/objects/Volunteer_Assignment__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Junction object from Position to Assignment object.</description>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>