force-app/main/default/objects/Volunteer_Assignment__c/fields/Prior_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_Value__c</fullName>
    <description>Hidden field (updated by workflow) used as part of Is_Active formula field; this allows volunteers with prior status value of candidate and current status of approved to maintain active status until volunteer assignment starts.</description>
    <inlineHelpText>Hidden field (updated by workflow) used as part of Is_Active formula field; this allows volunteers with prior status value of candidate and current status of approved to maintain active status until volunteer assignment starts.</inlineHelpText>
    <label>Prior Status Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>