force-app/main/default/objects/Volunteer_Assignment__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <formula>Position__r.Program__r.Program_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location</label>
    <type>Text</type>
</CustomField>