force-app/main/default/objects/Volunteer_Assignment__c/fields/Reimbursement_Election__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Election__c</fullName>
    <description>Captures a TA volunteer&#39;s flat rate election if they choose not to be reimbursed or if their reimbursement needs to be put on hold.</description>
    <inlineHelpText>This value is automatically stored based on a value selected in the flat rate mass approval interface.</inlineHelpText>
    <label>Reimbursement Election</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electing No Reimbursement</fullName>
            </value>
            <value>
                <fullName>Place on Hold</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>