force-app/main/default/objects/Volunteer_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date for a volunteer assignment.</description>
    <inlineHelpText>Select the start date for this assignment.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>