force-app/main/default/objects/Volunteer_Assignment__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Total number of hours volunteered for this assignment (total only includes hours that have been submitted and approved).</description>
    <inlineHelpText>Total number of hours volunteered for this assignment (total only includes hours that have been submitted and approved).</inlineHelpText>
    <label>Total Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>