force-app/main/default/objects/Volunteer_Assignment__c/fields/VA_Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>VA_Migration_Key__c</fullName>
    <description>External Identifier that links data migrated into VTM to its source in VMIS.</description>
    <externalId>true</externalId>
    <label>VA Migration Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>