force-app/main/default/objects/Volunteer_Assignment__c/fields/Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_ID__c</fullName>
    <description>Formula field for Volunteer ID</description>
    <formula>Contact__r.Volunteer_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer ID</label>
    <type>Text</type>
</CustomField>