force-app/main/default/objects/Volunteer_Assignment__c/fields/Year_Over_Year_Comparison_ED__c.field-meta.xml
<CustomField>
    <fullName>Year_Over_Year_Comparison_ED__c</fullName>
    <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),01,01)) &gt;= ( Actual_End_Date__c  - DATE( (IF( Actual_End_Date__c &lt; DATE( YEAR( Actual_End_Date__c ) ,01,01),
YEAR( Actual_End_Date__c ) -1,
YEAR( Actual_End_Date__c ) )
),01,01)) ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Over Year Comparison ED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>