force-app/main/default/objects/Volunteer_Assignment__c/fields/Year_Span__c.field-meta.xml
<CustomField>
    <fullName>Year_Span__c</fullName>
    <formula>IF(NOT(ISNULL(Start_Date__c)),
  IF( ISNULL(Actual_End_Date__c),
    IF(YEAR(Start_Date__c) = YEAR(TODAY()),
      TEXT(YEAR(Start_Date__c)),
      TEXT(YEAR(Start_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(TODAY()))
    ),
    IF(YEAR(Start_Date__c) = YEAR(Actual_End_Date__c),
      TEXT(YEAR(Start_Date__c)),
      TEXT(YEAR(Start_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Actual_End_Date__c))
    )
  ),
 &quot; &quot;
)</formula>
    <label>Year Span</label>
    <type>Text</type>
</CustomField>