force-app/main/default/objects/Volunteer_Assignment__c/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(Start_Date__c)),
    NOT(ISNULL( Actual_End_Date__c ))
  ),
  (Actual_End_Date__c - Start_Date__c) / 365, 
  IF(
    AND(
      NOT(ISNULL(Start_Date__c)),
      ISNULL(Actual_End_Date__c),
      Start_Date__c &gt; TODAY()
    ),
    0.0,
    IF(
      AND(
        NOT(ISNULL(Start_Date__c)),
        ISNULL(Actual_End_Date__c)
      ),
      (TODAY() - Start_Date__c) / 365, 
      0.0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of Service</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>