force-app/main/default/objects/Volunteer_Assignment__c/fields/YTD_Non_payroll_Taxed_Stipends_Paid__c.field-meta.xml
<CustomField>
    <fullName>YTD_Non_payroll_Taxed_Stipends_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of non-payroll taxed stipends paid year-to-date.</inlineHelpText>
    <label>YTD Non-payroll Taxed Stipends Paid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>