force-app/main/default/objects/Volunteer_Assignment__c/validationRules/End_Date_Required_for_EC_VA.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required_for_EC_VA</fullName>
    <active>true</active>
    <description>The &quot;End Date&quot; field must be populated for Experience Corps Volunteer Assignments.</description>
    <errorConditionFormula>AND(
(Position__r.Program__r.Enterprise_Brand__c = &quot;Experience Corps&quot;),

(ISBLANK(Actual_End_Date__c)),

ISPICKVAL(Status__c, &quot;Approved&quot;)
)</errorConditionFormula>
    <errorDisplayField>Actual_End_Date__c</errorDisplayField>
    <errorMessage>Please enter the End Date for the Volunteer Assignment.</errorMessage>
</ValidationRule>