force-app/main/default/objects/Volunteer_Assignment__c/validationRules/No_Match_Status_Not_Available_to_PP.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Match_Status_Not_Available_to_PP</fullName>
    <active>true</active>
    <description>No Match Status Not Available to Purpose Prize</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c , &quot;No Match&quot;),
CONTAINS(Position__r.Program__r.Branding_Descriptor__c,&quot;Purpose Prize&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>No Match Status Not Available to Purpose Prize</errorMessage>
</ValidationRule>