force-app/main/default/objects/Volunteer_Assignment__c/validationRules/On_Hold_Cannot_Be_Approved_for_Stipend.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Cannot_Be_Approved_for_Stipend</fullName>
    <active>true</active>
    <description>Volunteers cannot receive stipend payment if their assignment status is &quot;On Hold.&quot;</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;On Hold&quot;) ,
Pay_Monthly_Stipend__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Pay Monthly Stipend cannot be checked if volunteer&#39;s assignment status is &quot;On Hold.&quot;</errorMessage>
</ValidationRule>