force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Pay_Monthly_Stipend.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_Monthly_Stipend</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Pay_Monthly_Stipend__c = True, Position__r.Full_Stipend_Amount__c = 0)</errorConditionFormula>
    <errorMessage>In order to pay monthly stipend the full stipend amount on the position associated with this assignment must have a value greater than zero.</errorMessage>
</ValidationRule>