force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Prevent_Create_After_Death_Date_Workflow.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Create_After_Death_Date_Workflow</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 $Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
 NOT(ISBLANK(Contact__r.Death_Notification_Date__c)),
 ISNEW()
)</errorConditionFormula>
    <errorMessage>New assignment records cannot be created for deceased volunteers.</errorMessage>
</ValidationRule>