force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Prevent_Flagged_Volunteer_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Flagged_Volunteer_Assignment</fullName>
    <active>true</active>
    <description>Volunteers who have been red-flagged cannot be assigned.  Red-flag explanation is on volunteer&#39;s contact record.</description>
    <errorConditionFormula>Contact__r.Red_Flagged__c = TRUE</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Volunteers who have been red-flagged cannot be assigned.  Contact staff for guidance.</errorMessage>
</ValidationRule>