force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Start_Date_and_End_Date_No_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_and_End_Date_No_Match</fullName>
    <active>true</active>
    <description>The assignment Start Date and End Date must be before today&#39;s date when status is No Match.</description>
    <errorConditionFormula>AND(

NOT(ISBLANK(Start_Date__c )),
ISPICKVAL(Status__c, &quot;No Match&quot;),

or(
Start_Date__c &gt;=  TODAY(),
Actual_End_Date__c &gt;=  TODAY()
)
)</errorConditionFormula>
    <errorMessage>The assignment Start Date and End Date must be before today&#39;s date when status is No Match.</errorMessage>
</ValidationRule>