force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Start_Date_Before_Actual_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Before_Actual_End_Date</fullName>
    <active>true</active>
    <description>The assignment end date cannot be before the assignment start date.</description>
    <errorConditionFormula>Start_Date__c  &gt;  Actual_End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The assignment end date cannot be before the assignment start date.</errorMessage>
</ValidationRule>