force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Start_Date_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>Start_Date cannot be blank if Actual_End_Date is not NULL.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(  Actual_End_Date__c )) , 
ISBLANK( Start_Date__c ),
ISBLANK(Contact__r.Death_Notification_Date__c) 
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be blank if End Date has a value.</errorMessage>
</ValidationRule>