force-app/main/default/objects/Volunteer_Assignment__c/validationRules/Start_Date_Must_Have_Approved_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_Have_Approved_Status</fullName>
    <active>true</active>
    <description>Assignment start date cannot be assigned if assignment status is Submitted or No Match.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( Start_Date__c )) ,
OR(
(ISPICKVAL(Status__c, &quot;Submitted&quot;)),
(ISPICKVAL(Status__c, &quot;Candidate&quot;)) 
))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>A Start Date cannot be entered unless assignment status is Approved or On Hold.</errorMessage>
</ValidationRule>