force-app/main/default/objects/Volunteer_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Actual_End_Date__c</columns>
    <columns>Local_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>